--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -1,33 +1,38 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3.5rem;
   font-weight: 900;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+.big-heading {
+  font-size: 3.5rem;
   line-height: 1.5;
 }
 
-h2 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+.section-heading {
   font-size: 3rem;
   line-height: 1.5;
 }
 
-h3 {
-  font-size: 1.5rem;
-  font-weight: 900;
-}
-
 .container-fluid {
-  padding: 3% 15% 7%;
+  padding: 7% 15%;
 }
 
-#title {
+.colored-section {
   background-color: #ff4c68;
   color: white;
+}
+
+.white-section {
+  background-color: white;
 }
 
 .navbar {
@@ -52,6 +57,11 @@ h3 {
   margin: 5% 3% 5% 0;
 }
 
+#title .container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
 .title-image {
   transform: rotate(25deg);
   width: 60%;
@@ -60,19 +70,16 @@ h3 {
 }
 
 #features {
-  background-color: white;
-  padding: 7% 15%;
   position: relative;
   z-index: 1;
 }
 
-.feature-box {
-  padding: 5%;
-  text-align: center;
+.feature-title {
+  font-size: 1.5rem;
 }
 
-#features p {
-  color: #8f8f8f;
+.feature-box {
+  padding: 5%;
 }
 
 .icon {
@@ -86,8 +93,11 @@ h3 {
 
 #testimonials {
   background-color: #ef8172;
-  color: white;
-  text-align: center;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -98,7 +108,6 @@ h3 {
 
 #press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -108,14 +117,33 @@ h3 {
 }
 
 .carousel-item {
-  padding: 7% 15%;
 }
 
 #pricing {
   padding: 100px;
-  text-align: center;
+}
+
+.pricing-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column {
   padding: 3% 2%;
+}
+
+.social-icon {
+  margin: 20px 10px;
+}
+
+@media (max-width: 1028px) {
+  
+  #title {
+    text-align: center;
+  }
+  
+  .title-image {
+    position: static;
+    transform: rotate(0deg);
+  }
 }
